# CRPromptManager

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
CRPromptManager/: dialog_about.py  dialog_prompt_runner.py  dialog_settings2.py  main.py
